--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
    <html>
     <body>
-        <center>
+<!--         <center> -->
             <h1>My Portfolio</h1>
 <!--            <h2>l;as;ll;kasdk;;kld;la;ldk;</h2> -->
         </center>
